--- a/PalestraPalestrante/Views/Usuario/CadastrarUsuario.cshtml
+++ b/PalestraPalestrante/Views/Usuario/CadastrarUsuario.cshtml
@@ -26,12 +26,12 @@
                             </div>
                         </div>
                     </div>
-                    <h2>ViewBag.CadastroLog</h2>
+                    <h2>@TempData["CadastroLog"]</h2>
                     <div class="card-body p-3 p-md-5">
                         <form asp-action="CadastrarUsuario">
                             <div class="row">
                                 <div class="col-12 col-lg-8">
-                                    
+
                                     <!-- Carousel com controles e indicadores -->
                                     <div id="eventCarousel" class="carousel slide carousel-custom" data-bs-ride="carousel">
                                         <div class="carousel-inner">
@@ -75,7 +75,7 @@
                                     <div class="row">
                                         <div class="col-12 col-md-6">
                                             <div class="floating-label">
-                                                <input type="text" class="form-control form-control-custom" name="cpf" placeholder=" " required maxlength="14">
+                                                <input type="text" class="form-control form-control-custom" id="cpf" name="cpf" placeholder=" " required maxlength="14">
                                                 <label for="cpf"><i class="fas fa-id-card me-2"></i>CPF</label>
                                             </div>
                                             <div class="cpf-counter" id="cpfCounter">0/11 dígitos</div>
@@ -104,15 +104,17 @@
                                     <div class="row">
                                         <div class="col-12 col-md-6">
                                             <div class="floating-label">
-                                                <input type="password" class="form-control form-control-custom" name="senha" placeholder=" " required maxlength="50">
+                                                <input type="password" class="form-control form-control-custom" id="senha" name="senha" placeholder=" " required maxlength="50">
                                                 <label for="senha"><i class="fas fa-lock me-2"></i>Senha</label>
                                             </div>
-                                            <div class="password-strength bg-secondary" id="passwordStrength"></div>
+                                            <div class="password-strength-container">
+                                                <div class="password-strength bg-secondary" id="passwordStrength"></div>
+                                            </div>
                                             <small class="text-muted">Força da senha</small>
                                         </div>
                                         <div class="col-12 col-md-6">
                                             <div class="floating-label">
-                                                <input type="password" class="form-control form-control-custom" name="confirmarSenha" placeholder=" " required maxlength="50">
+                                                <input type="password" class="form-control form-control-custom" id="confirmarSenha" name="confirmarSenha" placeholder=" " required maxlength="50">
                                                 <label for="confirmarSenha"><i class="fas fa-lock me-2"></i>Confirmar Senha</label>
                                             </div>
                                             <div class="form-text" id="passwordMatch"></div>
