--- a/PalestraPalestrante/Views/Usuario/Login.cshtml
+++ b/PalestraPalestrante/Views/Usuario/Login.cshtml
@@ -19,7 +19,6 @@
     <link href="~/css/login.css" rel="stylesheet" />
 </head>
 <body>
-    <a class="nav-link text-dark" asp-area="" asp-controller="ListaEvento" asp-action="ListaGeral">SITEPARTEPESQUISA</a>
     <div class="login-container">
         <div class="login-wrapper">
             <!-- Left Side - Form -->
@@ -36,12 +35,14 @@
                     </div>
 
                     <!-- Login Form -->
-                    <form id="loginForm" class="login-form">
+                    <form asp-action="Login" id="loginForm" class="login-form">
+                        @TempData["LoginLog"]
                         <!-- CPF Field -->
                         <div class="form-group-floating mb-4">
                             <input type="text"
                                    class="form-control form-control-custom"
                                    id="cpf"
+                                   name="cpf"
                                    placeholder=" "
                                    required
                                    maxlength="14">
@@ -56,25 +57,13 @@
                             <input type="password"
                                    class="form-control form-control-custom"
                                    id="senha"
+                                   name="senha"
                                    placeholder=" "
                                    required
                                    maxlength="50">
                             <label for="senha">
                                 <i class="fas fa-lock me-2"></i>Senha
                             </label>
-                        </div>
-
-                        <!-- Remember Me & Forgot Password -->
-                        <div class="d-flex justify-content-between align-items-center mb-4">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="lembrar">
-                                <label class="form-check-label" for="lembrar">
-                                    Lembrar-me
-                                </label>
-                            </div>
-                            <a href="/recuperar-senha" class="forgot-password">
-                                Esqueceu a senha?
-                            </a>
                         </div>
 
                         <!-- Submit Button -->
