--- a/PalestraPalestrante/Views/ListaEvento/ListaGeral.cshtml
+++ b/PalestraPalestrante/Views/ListaEvento/ListaGeral.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PalestraPalestrante.Authenticacao;
+@using System.Text.RegularExpressions
 @{
     Layout = null;
 }
@@ -38,17 +39,18 @@
                 </div>
                 <div class="user-info">
                     <h5 id="userName">
-                        @Context.Session.GetString(SessionKeys.nome_usuario)
+                        Nome: @Context.Session.GetString(SessionKeys.nome_usuario)
                     </h5>
-                    <p id="userEmail">@Context.Session.GetString(SessionKeys.email_usuario)</p>
+                    <p id="userEmail">Email: @Context.Session.GetString(SessionKeys.email_usuario)</p>
                     <div class="user-details">
                         <div class="user-detail">
                             <i class="fas fa-id-card"></i>
-                            <span id="userCPF">@Context.Session.GetString(SessionKeys.cpf_usuario)</span>
+                            <span id="userCPF">CPF: @Regex.Replace(@Context.Session.GetString(SessionKeys.cpf_usuario), @"^(\d{3})(\d{3})(\d{3})(\d{2})$", "$1.$2.$3-$4")</span>
+                            
                         </div>
                         <div class="user-detail">
                             <i class="fas fa-briefcase"></i>
-                            <span id="userCargo">@Context.Session.GetString(SessionKeys.cargo_usuario)</span>
+                            <span id="userCargo">Cargo: @Context.Session.GetString(SessionKeys.cargo_usuario)</span>
                         </div>
                     </div>
                 </div>
