--- a/PalestraPalestrante/Views/Home/Home.cshtml
+++ b/PalestraPalestrante/Views/Home/Home.cshtml
@@ -208,11 +208,6 @@
                 </div>
             </div>
 
-            <div class="text-center mt-4">
-                <a href="/palestras" class="btn btn-outline-primary-custom">
-                    <i class="fas fa-list me-2"></i>Ver Todas as Palestras
-                </a>
-            </div>
         </div>
     </section>
 
@@ -339,7 +334,7 @@
                 <h2>Pronto para expandir seu conhecimento?</h2>
                 <p>Junte-se a milhares de profissionais que já transformaram suas carreiras</p>
                 <div class="cta-buttons">
-                    <a href="/cadastrarusuario" class="btn btn-primary-custom btn-lg me-3">
+                    <a asp-controller="Usuario" asp-action="CadastrarUsuario" class="btn btn-primary-custom btn-lg me-3">
                         <i class="fas fa-user-plus me-2"></i>Criar Minha Conta
                     </a>
                     <a href="#palestras" class="btn btn-outline-light btn-lg">
