--- a/PalestraPalestrante/Views/ListaEvento/CadastrarPalestra.cshtml
+++ b/PalestraPalestrante/Views/ListaEvento/CadastrarPalestra.cshtml
@@ -52,11 +52,11 @@
                 </ul>
 
                 <div class="d-flex">
-                    <a class="btn btn-outline-primary-custom me-2" asp-area="" asp-controller="Usuario" asp-action="CadastrarUsuario">
-                        <i class="fas fa-user-plus me-1"></i>Cadastrar
+                    <a class="btn btn-primary-custom" asp-area="" asp-controller="ListaEvento" asp-action="ListaGeral" style="margin-right: 3px;">
+                        <i class="fas fa-sign-in-alt me-1"></i>Voltar
                     </a>
-                    <a class="btn btn-primary-custom" asp-area="" asp-controller="Usuario" asp-action="Login">
-                        <i class="fas fa-sign-in-alt me-1"></i>Entrar
+                    <a class="btn btn-primary-custom" asp-area="" asp-controller="Usuario" asp-action="Sair">
+                        <i class="fas fa-sign-in-alt me-1"></i>Sair
                     </a>
                 </div>
             </div>
