--- a/PalestraPalestrante/Views/Usuario/GerenciarUsuario.cshtml
+++ b/PalestraPalestrante/Views/Usuario/GerenciarUsuario.cshtml
@@ -51,11 +51,11 @@
                 </ul>
 
                 <div class="d-flex">
-                    <a class="btn btn-outline-primary-custom me-2" href="/editar-perfil">
-                        <i class="fas fa-user-edit me-1"></i>Editar Perfil
+                    <a class="btn btn-primary-custom" asp-area="" asp-controller="ListaEvento" asp-action="ListaGeral" style="margin-right: 3px;">
+                        <i class="fas fa-sign-in-alt me-1"></i>Voltar
                     </a>
-                    <a class="btn btn-primary-custom" href="/logout">
-                        <i class="fas fa-sign-out-alt me-1"></i>Sair
+                    <a class="btn btn-primary-custom" asp-area="" asp-controller="Usuario" asp-action="Sair">
+                        <i class="fas fa-sign-in-alt me-1"></i>Sair
                     </a>
                 </div>
             </div>
